# splitcode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  splitcode.html  splitcode.js  splitcode.wasm
.github/workflows/: test.yml
docs/: index.html
ext/htslib/: bgzf.c  faidx.c
ext/htslib/cram/: vlen.c
ext/htslib/htslib/: faidx.h
func_tests/: CMakeLists.txt  b.fastq  config.tsv  config_.tsv  config__.tsv  config___.tsv  config_fastassign.txt  config_fastassign_2.txt  config_sm.txt  configb.txt  even.txt  example.SJ.tab  from_name.fq  input.fastq  input_.fastq  input__.fastq  input___.fastq  nest.test.1.R1.fa  nest.test.1.R1.fq  nest.test.1.R2.fq  nest.test.2.R1.fq  nest.test.2.R2.fq  nest.test.3.R1.fq  nest.test.3.R2.fq  nest_config.txt  nest_config_2.txt  nest_config_3.txt  nest_config_4.txt  nest_config_5.txt  odd.txt  runtests.sh  splitcode_example_config.txt  splitcode_example_config_2.txt  splitcode_example_config_3.txt  splitcode_example_config_4.txt
src/: CMakeLists.txt  LiftWorkflow.h  ProcessReads.cpp  ProcessReads.h  SplitCode.h  common.h  main.cpp
